...
        }
    }
    
    // MARK: - UI
    private let favoritesLabel: UILabel = {
        let lbl = UILabel()
        lbl.text = "Here is your favorite movies."
        lbl.textAlignment = .center
        lbl.font = .boldSystemFont(ofSize: 20)
        lbl.textColor = .label
        lbl.translatesAutoresizingMaskIntoConstraints = false
        return lbl
    }()
...
