...
    
    private var filteredResults: [Results] = []
    
    // MARK: - UI Components
    private let searchBar: UISearchBar = {
        let sb = UISearchBar()
        sb.placeholder = "Buscar filmes"
        sb.translatesAutoresizingMaskIntoConstraints = false
        return sb
    }()
    
    private lazy var moviesTableView: UITableView = {
        let tableView = UITableView()
...
